log/build_2024-01-02_14-32-28/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/yamashita/ros2_ws/install/mypkg/lib/python3.10/site-packages/mypkg/listener.py", line 6
    node.get_logger().info("Listen %d" $ msg.data)
                                       ^
SyntaxError: invalid syntax

